# agent-demo1

./: .env  .env.example  README.md  custom_tracker.yaml  graph_mermaid.mmd  highway_rules.json  pyproject.toml  tampering_rules.json  test.py  test1.py  video_quality_rules.json  visualize_graph.py  visualize_roi.py  vlm_pair_uploader.py  说明.txt
.cache/background_residual/2e0e4fb7-b015-46bd-bfe8-25b8e543478a/: residual_report.txt
.cache/background_residual/5e69f840-6957-4c58-89a4-c9dd083e13bc/: residual_report.txt
.cache/background_residual/889bb890-2439-44b2-a275-6fe550a60ed8/: residual_report.txt
.cache/background_residual/demo-1_part001/: residual_report.txt
.cache/background_residual/demo-1_part002/: residual_report.txt
.cache/background_residual/demo-1_part003/: residual_report.txt
.cache/background_residual/demo-1_part004/: residual_report.txt
.cache/background_residual/demo-2_part001/: residual_report.txt
.cache/background_residual/demo-2_part003/: residual_report.txt
.cache/background_residual/demo-2_part004/: residual_report.txt
.cache/background_residual/demo-3_part002/: residual_report.txt
.cache/background_residual/demo-3_part004/: residual_report.txt
.cache/car_detection/demo-1_part001/: bboxes.json  (+1 more)
src/video_tampering_agent/: __init__.py  __main__.py  config.py  custom_logging.py  llm.py  reporting.py  runner.py  service.py  state.py  tool_demo.py
src/video_tampering_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
web/: README.md  package-lock.json  package.json  vite.config.js
web/src/: App.vue  style.css
(+87 files in other folders)
